--- a/roots/detailer.html
+++ b/roots/detailer.html
@@ -3,24 +3,192 @@
 
 <head>
     <title>零售商</title>
+    <link rel="stylesheet" href="/public/assets/bulma.min.css">
+    <script src="/public/assets/easytimer.js"></script>
+    <script src="/public/assets/vue.js"></script>
+
+    <style type="text/css">
+        .field-label {
+            text-align: left;
+        }
+    </style>
+</head>
+
+<body>
+
+    <div id="app">
+        <div class="columns" style="margin-top: 30px; margin-left: 10px;">
+            <div class="column is-one-third">
+
+                <h3 class="title is-5">节点信息</h3>
+                <div class="box">
+
+                    <div class="field is-horizontal">
+                        <div class="field-label is-small">
+                            <label class="label">GameID</label>
+                        </div>
+                        <div class="field-label is-normal">
+                            <label class="label">{{ gameID }}</label>
+                        </div>
+                    </div>
+                    <div class="field is-horizontal">
+                        <div class="field-label is-small">
+                            <label class="label">开始时间</label>
+                        </div>
+                        <div class="field-label is-normal">
+                            <label class="label">{{ startTime }}</label>
+                        </div>
+                    </div>
+
+                    <div class="field is-horizontal">
+                        <div class="field-label is-small">
+                            <label class="label">角色</label>
+                        </div>
+                        <div class="field-label is-normal">
+                            <label class="label">零售商</label>
+                        </div>
+                    </div>
+                    <div class="field is-horizontal">
+                        <div class="field-label is-small">
+                            <label class="label">最大库存</label>
+                        </div>
+                        <div class="field-label is-normal">
+                            <label class="label">{{maxInventory}}</label>
+                        </div>
+                    </div>
+                    <div class="field is-horizontal">
+                        <div class="field-label is-small">
+                            <label class="label">库存</label>
+                        </div>
+                        <div class="field-label is-normal">
+                            <label class="label">{{currentInventory}}</label>
+                        </div>
+                    </div>
+                    <div class="field is-horizontal">
+                        <div class="field-label is-small">
+                            <label class="label">订单</label>
+                        </div>
+                        <div class="field-label is-normal">
+                            <label class="label">{{purchaseCnt}}</label>
+                        </div>
+                    </div>
+
+                    <div class="block"></div>
+                    <button onclick="sendJoinAsRoleMessage()" class="button is-primary is-small">加入零售商</button>
+
+                </div>
+
+                <h3 class="title is-5">卡车信息</h3>
+                <div class="box">
+
+                    <div class="field is-horizontal">
+                        <div class="field-label is-small">
+                            <label class="label">编号</label>
+                        </div>
+                        <div class="field-label is-normal">
+                            <label class="label">{{ truckInfo.truckID }}</label>
+                        </div>
+                    </div>
+
+                    <div class="field is-horizontal">
+                        <div class="field-label is-small">
+                            <label class="label">最大装载量</label>
+                        </div>
+                        <div class="field-label is-normal">
+                            <label class="label">{{truckInfo.tMaxQuantity}} 件</label>
+                        </div>
+                    </div>
+
+                    <div class="field is-horizontal">
+                        <div class="field-label is-small">
+                            <label class="label">已装载量</label>
+                        </div>
+                        <div class="field-label is-normal">
+                            <label class="label">{{truckInfo.tQuantity}} 件</label>
+                        </div>
+                    </div>
+
+                    <div class="field is-horizontal">
+                        <div class="field-label is-small">
+                            <label class="label">距离</label>
+                        </div>
+                        <div class="field-label is-normal">
+                            <label class="label">{{truckInfo.distance}} KM</label>
+                        </div>
+                    </div>
+
+                    <div class="block"></div>
+                    <div class="buttons">
+
+                        <button onclick="sendTruckDestinationMessage()"
+                            class="button is-primary is-small">召唤卡车到入库区</button>
+                        <button onclick="transferProductsFromTruck()" class="button is-primary is-small">卸货入库</button>
+                    </div>
+                    <div class="buttons">
+                        <button onclick="sendAddInventoryMessage()" class="button is-primary is-small">卡车离开</button>
+                        <button onclick="soldOut()" class="button is-primary is-small">出货</button>
+                        <button onclick="sendDecreaseInventoryMessage()" class="button is-primary is-small">更新购物库存</button>
+                    </div>
+
+                </div>
+
+                <div class="message">
+                    <div class="message-body">
+                        <span style="font-size: small;">{{status}}</span>
+                    </div>
+                </div>
+
+            </div>
+            <div class="column"></div>
+            <div class="column"></div>
+        </div>
+
+    </div>
+
+
+
     <script type="text/javascript">
+        const App = {
+            data() {
+                return {
+                    gameID: "NA",
+                    startTime: 0,
+                    status: "",
+                    truckInfo: {
+                        truckID: 24,
+                        distance: 0,
+                        tMaxQuantity: 0,
+                        tQuantity: 0
+                    },
+                    currentInventory: 0,
+                    maxInventory: 0,
+                    purchaseCnt: 0
+                }
+            }
+        }
+        const vm = Vue.createApp(App).mount("#app");
+        // const timer = new Timer();
+
         var conn;
-        var msg = document.getElementById("msg");
-        var log = document.getElementById("log");
         var roleID = 16;
 
-        function appendLog(item) {
-            // var doScroll = log.scrollTop > log.scrollHeight - log.clientHeight - 1;
-            log.appendChild(item);
-            // if (doScroll) {
-            //     log.scrollTop = log.scrollHeight - log.clientHeight;
-            // }
+        function soldOut(){
+            let inventory = vm.currentInventory;
+            let order = vm.purchaseCnt;
+            if(inventory>order){
+                vm.currentInventory = inventory - order;
+                vm.purchaseCnt = 0;
+            }else{
+                vm.currentInventory = 0;
+                vm.purchaseCnt -= inventory;
+            }
         }
-        function appendLogText(text) {
-            var item = document.createElement("div");
-            item.innerText = text;
-            appendLog(item);
+
+        function transferProductsFromTruck(){
+            vm.currentInventory += vm.truckInfo.tQuantity;
+            vm.truckInfo.tQuantity = 0;
         }
+
         function sendJoinAsRoleMessage() {
             let roleInfo = {
                 "type": 1,
@@ -34,7 +202,7 @@
             let roleInfo = {
                 "type": 4,
                 "roleID": roleID,
-                "truckID": 21
+                "truckID": vm.truckInfo.truckID
             };
             conn.send(JSON.stringify(roleInfo));
             console.log("--> ");
@@ -44,7 +212,7 @@
             let roleInfo = {
                 "type": 7,
                 "roleID": roleID,
-                "currentInventory": 100
+                "currentInventory": vm.currentInventory
             };
             conn.send(JSON.stringify(roleInfo));
             console.log("--> ");
@@ -54,9 +222,9 @@
             let roleInfo = {
                 "type": 6,
                 "roleID": roleID,
-                "currentInventory": 110,
-                "truckID": 21,
-                "tQuantity": 0
+                "currentInventory": vm.currentInventory,
+                "truckID": vm.truckInfo.truckID,
+                "tQuantity": vm.truckInfo.tQuantity
             };
             conn.send(JSON.stringify(roleInfo));
             console.log("--> ");
@@ -64,25 +232,14 @@
         }
 
         window.onload = function () {
-            log = document.getElementById("log");
-            document.getElementById("form").onsubmit = function () {
-                if (!conn) {
-                    return false;
-                }
-                if (!msg.value) {
-                    return false;
-                }
-                conn.send(msg.value);
-                msg.value = "";
-                return false;
-            };
 
             if (window["WebSocket"]) {
                 conn = new WebSocket("ws://" + document.location.host + "/ws");
                 conn.onclose = function (evt) {
-                    var item = document.createElement("div");
-                    item.innerHTML = "<b>Connection closed.</b>";
-                    appendLog(item);
+                    vm.status = "连接已断开";
+                };
+                conn.onopen = function (evt) {
+                    vm.status = "已连接到服务器";
                 };
                 conn.onmessage = function (evt) {
                     var messages = evt.data.split('\n');
@@ -96,99 +253,42 @@
                                 break;
                             case 2:
                                 if (roleID == obj.roleID) {
-                                    var text = `GameID: ${obj.gameID}   Inventory: ${obj.currentInventory} / ${obj.maxInventory}`;
-                                    appendLogText(text);
+                                    vm.gameID = obj.gameID;
+                                    vm.startTime = obj.gameStartTime;
+                                    vm.maxInventory = obj.maxInventory;
+                                    vm.currentInventory = obj.currentInventory;
                                 }
                                 break;
                             case 3:
                                 if (roleID == obj.roleID) {
-                                    var text = `purchase event: ${obj.purchaseCnt}`;
-                                    appendLogText(text);
+                                    vm.purchaseCnt += obj.purchaseCnt;
                                 }
                                 break;
                             case 5:
                                 if (roleID == obj.roleID) {
-                                    var text = `truck ${obj.truckID} is coming, distance now is ${obj.remainingDistance}`
-                                    appendLogText(text);
+                                    vm.truckInfo.truckID = obj.truckID;
+                                    vm.truckInfo.distance = obj.remainingDistance;
+                                    vm.truckInfo.tMaxQuantity = obj.tMaxQuantity;
+                                    vm.truckInfo.tQuantity = obj.tQuantity;
                                 }
                                 break;
                             case 8:
-                                var text = `game reset to ${obj.gameID}`
-                                appendLogText(text);
+                                vm.gameID = obj.gameID
                                 break;
 
                             default:
-                                console.log(`No Such Message Type ${obj.type}`);
+                                console.error(`No Such Message Type ${obj.type}`);
                                 break;
                         }
                     }
                 };
             } else {
-                var item = document.createElement("div");
-                item.innerHTML = "<b>Your browser does not support WebSockets.</b>";
-                appendLog(item);
+                console.error("Your browser does not support WebSockets.");
             }
         };
 
     </script>
-    <style type="text/css">
-        html {
-            overflow: hidden;
-        }
 
-        body {
-            overflow: hidden;
-            padding: 0;
-            margin: 0;
-            width: 100%;
-            height: 100%;
-            background: gray;
-        }
-
-        #log {
-            background: white;
-            margin: 0;
-            padding: 0.5em 0.5em 0.5em 0.5em;
-            position: absolute;
-            top: 0.5em;
-            left: 0.5em;
-            right: 0.5em;
-            min-width: 200px;
-            /* bottom: 3em; */
-            overflow: auto;
-        }
-
-        #control-panel {
-            background: green;
-            margin: 0;
-            padding: 0.5em 0.5em 0.5em 0.5em;
-            position: absolute;
-            height: 5em;
-            left: 0.5em;
-            right: 0.5em;
-            bottom: 3em;
-            overflow: auto;
-        }
-
-        button {
-            margin-top: 10px;
-        }
-    </style>
-</head>
-
-<body>
-    <div id="log"></div>
-    <div id="control-panel">
-
-        <button onclick="sendJoinAsRoleMessage()" style="width: 100px;height: 36px;">加入零售商</button>
-        <button onclick="sendTruckDestinationMessage()" style="width: 150px;height: 36px;">召唤卡车到入库区</button>
-        <button onclick="sendAddInventoryMessage()" style="width: 100px;height: 36px;">卡车离开</button>
-        <button onclick="sendDecreaseInventoryMessage()" style="width: 100px;height: 36px;">更新购物库存</button>
-        <form id="form" style="margin-top: 10px; margin-bottom: 5px;">
-            <input type="submit" value="Send" style="margin-bottom: 5px;" />
-            <input type="text" id="msg" size="64" autofocus />
-        </form>
-    </div>
 </body>
 
 </html>
