添加首页图片

--- a/roots/index.html
+++ b/roots/index.html
@@ -23,10 +23,11 @@
         }
     </script>
     <style type="text/css">
-        .card{
+        .card {
             cursor: pointer;
         }
-        .content{
+
+        .content {
             font-weight: bold;
         }
     </style>
@@ -39,10 +40,10 @@
     <div class="columns" style="margin-top: 30px; margin-left: 10px;">
         <div class="column "></div>
         <div class="column is-2" style="text-align: center;">
-            <div class="card"  onclick="openTab('producer.html')" >
+            <div class="card" onclick="openTab('producer.html')">
                 <div class="card-image">
                     <figure class="image is-4by3">
-                        <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+                        <img src="/public/assets/img/producer.png" alt="Placeholder image">
                     </figure>
                 </div>
                 <div class="card-content">
@@ -53,10 +54,10 @@
             </div>
         </div>
         <div class="column is-2" style="text-align: center;">
-            <div class="card" onclick="openTab('dispatcher1.html')" >
+            <div class="card" onclick="openTab('dispatcher1.html')">
                 <div class="card-image">
                     <figure class="image is-4by3">
-                        <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+                        <img src="/public/assets/img/dispatcher1.png" alt="Placeholder image">
                     </figure>
                 </div>
                 <div class="card-content">
@@ -67,10 +68,10 @@
             </div>
         </div>
         <div class="column is-2" style="text-align: center;">
-            <div class="card" onclick="openTab('dispatcher2.html')" >
+            <div class="card" onclick="openTab('dispatcher2.html')">
                 <div class="card-image">
                     <figure class="image is-4by3">
-                        <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+                        <img src="/public/assets/img/dispatcher2.png" alt="Placeholder image">
                     </figure>
                 </div>
                 <div class="card-content">
@@ -81,10 +82,10 @@
             </div>
         </div>
         <div class="column is-2" style="text-align: center;">
-            <div class="card" onclick="openTab('detailer.html')" >
+            <div class="card" onclick="openTab('detailer.html')">
                 <div class="card-image">
                     <figure class="image is-4by3">
-                        <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+                        <img src="/public/assets/img/detailer.png" alt="Placeholder image">
                     </figure>
                 </div>
                 <div class="card-content">
@@ -95,7 +96,7 @@
             </div>
         </div>
         <div class="column "></div>
-        
+
     </div>
 
 
