添加了小标题

--- a/roots/index.html
+++ b/roots/index.html
@@ -36,6 +36,7 @@
 <body>
     <div style="text-align: center; margin-top: 100px;">
         <h1 class="title is-1">供应链模拟实训系统</h1>
+        <h5 class="title is-5" style="color: grey; font-weight: 100;">支持线上线下混合互动的实训系统</h5>
     </div>
     <div class="columns" style="margin-top: 30px; margin-left: 10px;">
         <div class="column "></div>
