--- a/roots/detailer.html
+++ b/roots/detailer.html
@@ -11,6 +11,10 @@
         .field-label {
             text-align: left;
         }
+
+        .field {
+            align-items: center;
+        }
     </style>
 </head>
 
@@ -86,7 +90,11 @@
                             <label class="label">编号</label>
                         </div>
                         <div class="field-label is-normal">
-                            <label class="label">{{ truckInfo.truckID }}</label>
+                            <div class="select">
+                                <select v-model="truckInfo.truckID">
+                                    <option v-for="id in truckIDs">{{id}}</option>
+                                </select>
+                            </div>
                         </div>
                     </div>
 
@@ -127,7 +135,8 @@
                     <div class="buttons">
                         <button onclick="sendAddInventoryMessage()" class="button is-primary is-small">卡车离开</button>
                         <button onclick="soldOut()" class="button is-primary is-small">出货</button>
-                        <button onclick="sendDecreaseInventoryMessage()" class="button is-primary is-small">更新购物库存</button>
+                        <button onclick="sendDecreaseInventoryMessage()"
+                            class="button is-primary is-small">更新购物库存</button>
                     </div>
 
                 </div>
@@ -155,14 +164,15 @@
                     startTime: 0,
                     status: "",
                     truckInfo: {
-                        truckID: 24,
+                        truckID: 21,
                         distance: 0,
                         tMaxQuantity: 0,
                         tQuantity: 0
                     },
                     currentInventory: 0,
                     maxInventory: 0,
-                    purchaseCnt: 0
+                    purchaseCnt: 0,
+                    truckIDs: [21, 22, 23, 24, 25]
                 }
             }
         }
@@ -172,19 +182,19 @@
         var conn;
         var roleID = 16;
 
-        function soldOut(){
+        function soldOut() {
             let inventory = vm.currentInventory;
             let order = vm.purchaseCnt;
-            if(inventory>order){
+            if (inventory > order) {
                 vm.currentInventory = inventory - order;
                 vm.purchaseCnt = 0;
-            }else{
+            } else {
                 vm.currentInventory = 0;
                 vm.purchaseCnt -= inventory;
             }
         }
 
-        function transferProductsFromTruck(){
+        function transferProductsFromTruck() {
             vm.currentInventory += vm.truckInfo.tQuantity;
             vm.truckInfo.tQuantity = 0;
         }
