--- a/roots/dispatcher1.html
+++ b/roots/dispatcher1.html
@@ -11,6 +11,9 @@
         .field-label {
             text-align: left;
         }
+        .field {
+            align-items: center;
+        }
     </style>
 </head>
 
@@ -77,7 +80,12 @@
                             <label class="label">编号</label>
                         </div>
                         <div class="field-label is-normal">
-                            <label class="label">{{ truckInfo.truckID }}</label>
+                            <!-- <label class="label">{{ truckInfo.truckID }}</label> -->
+                            <div class="select">
+                                <select v-model="truckInfo.truckID">
+                                    <option v-for="id in truckIDs">{{id}}</option>
+                                </select>
+                            </div>
                         </div>
                     </div>
 
@@ -145,13 +153,14 @@
                     startTime: 0,
                     status: "",
                     truckInfo: {
-                        truckID: 22,
+                        truckID: 21,
                         distance: 0,
                         tMaxQuantity: 0,
                         tQuantity: 0
                     },
                     currentInventory: 0,
-                    maxInventory: 0
+                    maxInventory: 0,
+                    truckIDs: [21, 22, 23, 24, 25]
                 }
             }
         }
