--- a/roots/index.html
+++ b/roots/index.html
@@ -99,7 +99,26 @@
         <div class="column "></div>
 
     </div>
+    <div class="columns" style="margin-top: 30px; margin-left: 10px;">
+        <div class="column "></div>
 
+        <div class="column is-2" style="text-align: center;">
+            <div class="card" onclick="openTab('admin.html')">
+                <div class="card-image">
+                    <figure class="image is-4by3">
+                        <img src="/public/assets/img/detailer.png" alt="Placeholder image">
+                    </figure>
+                </div>
+                <div class="card-content">
+                    <div class="content">
+                        监控后台
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="column "></div>
+    </div>
 
     <div style="margin-top: 100px; text-align: center;">
 
